Fix layout issue on panel actions

--- a/resources/sass/design-system/components/_panels.scss
+++ b/resources/sass/design-system/components/_panels.scss
@@ -52,6 +52,7 @@
 
     // Actions
     &__action {
+        display: block;
         cursor: pointer;
         color: inherit;
         position: relative;
